# V2RayNGOH

./: README.md
V2rayNG_OHOS/: README.md  build-profile.json5  build_install.sh  local.properties  oh-package.json5
V2rayNG_OHOS/AppScope/: app.json5
V2rayNG_OHOS/AppScope/resources/base/element/: string.json
V2rayNG_OHOS/entry/: build-profile.json5  oh-package.json5
V2rayNG_OHOS/entry/src/main/: module.json5  syscap.json
V2rayNG_OHOS/entry/src/main/cpp/: CMakeLists.txt  napi_bridge.cpp
V2rayNG_OHOS/entry/src/main/cpp/types/libv2ray_bridge/: index.d.ts  oh-package.json5
V2rayNG_OHOS/entry/src/main/ets/Application/: MyAbilityStage.ts
V2rayNG_OHOS/entry/src/main/ets/MainAbility/: MainAbility.ts
V2rayNG_OHOS/entry/src/main/ets/components/: ConnectionStatus.ets  ServerCard.ets
V2rayNG_OHOS/entry/src/main/ets/model/: Enums.ts  ProfileItem.ts  SubscriptionItem.ts  V2rayConfig.ts
V2rayNG_OHOS/entry/src/main/ets/natives/: V2rayCore.ts
V2rayNG_OHOS/entry/src/main/ets/pages/: About.ets  Backup.ets  Index.ets  Logcat.ets  PerAppProxy.ets  Routing.ets  RoutingEdit.ets  ServerCustomConfig.ets  ServerEdit.ets  Settings.ets  Subscription.ets  SubscriptionEdit.ets
V2rayNG_OHOS/entry/src/main/ets/services/: CoreServiceManager.ts  ProxyService.ts  VpnService.ts
V2rayNG_OHOS/entry/src/main/ets/utils/: ConfigBuilder.ts  Logger.ts  Storage.ts  SubscriptionUpdater.ts  (+1 more)
V2rayNG_OHOS/hvigor/: hvigorw.js
V2rayNG_OHOS/v2ray_go/: Makefile  go.mod
V2rayNG_OHOS/v2ray_go/libs/aarch64-linux-ohos/: libv2ray_core.h
V2rayNG_OHOS/v2ray_go/libs/armeabi-v7a/: libv2ray_core.h
(+5 files in other folders)
